// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) hide_var 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) call_after_init 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_cai",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) warning_message 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_warn",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) noinit 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) init_on_onlchange 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) displaymode_hex 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) no_copy 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) linkalways 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_la",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) no_check 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_nck",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) no_instance_in_retain 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_nir",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) hide_all_locals 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_hal",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) no_assign 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_na",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) reflection 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_refl",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) unknown_attribute_typo 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) enable_dynamic_creation 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_edc",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) const_replaced 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_cr",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) const_non_replaced 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_cnr",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) global_init_slot 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_gis",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) monitoring_display 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) monitoring_encoding 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) subsequent 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) suppress_warning 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_sw",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conditionalshow 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) pingroup 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_pg",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) info_message 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_info",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) text_message 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_text",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) instance_path_with_reflection 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_ipr",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) displaymode_bin 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) displaymode_dec 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) displaymode_invalid_value 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) suppress_warning_multi 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_swm",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) no_init_aliases 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) linkalways_with_unused_pou 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conditionalshow_all_locals 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_csal",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) pin_presentation_order 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_ppo",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) estimated_stack_usage 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "Recurse",
    "char": 15,
    "file": "plc_prg",
    "label": "Recurse(iN : INT)",
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) no_virtual_actions 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_nva",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) io_function_block 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_iofb",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) call_after_global_init_slot 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_cagis",
    "char": 9,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) warning_disable_restore 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_wdr",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) call_after_online_change_slot 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_caocs",
    "char": 9,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) call_before_global_exit_slot 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_cbges",
    "char": 9,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) call_on_type_change 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_cotc",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) pin_presentation_order_outputs 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_ppoo",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) pin_presentation_order_wildcard 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_ppow",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) implicit_parameter_pouname 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "LogIt",
    "char": 13,
    "file": "plc_prg",
    "label": "LogIt(sCaller : STRING)",
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) region_basic 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_rb",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) error_message 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_err",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) region_pragma_basic 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Run",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) region_pragma_nested 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Run",
    "char": 10,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) fb_init_canonical 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_ic",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) fb_reinit_canonical 1`] = `
[
  {
    "activeParameter": null,
    "callee": "FB_Reinit",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) fb_exit_canonical 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_ec",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) fb_init_wrong_return_type 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_iwrt",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) fb_init_missing_bInCopyCode 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_imb",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) fb_exit_missing_bInCopyCode 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_emb",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) fb_reinit_with_params 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "FB_Reinit",
    "char": 17,
    "file": "plc_prg",
    "label": "FB_Reinit(iSeed : INT)",
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) identifier_double_underscore 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_du",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) identifier_consecutive_underscores 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_cu",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) identifier_backtick_keyword_escape 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Apply",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) init_slot_default_50000 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_d50",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) init_slot_reserved_alarm_manager 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_iram",
    "char": 8,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) init_slot_reserved_device_object 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_ird",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) init_slot_user_early 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_iue",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) shadowing_method_local_shadows_member 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) shadowing_method_param_shadows_member 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "Apply",
    "char": 13,
    "file": "plc_prg",
    "label": "Apply(iValue : INT)",
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_int_to_real_valid 1`] = `
[
  {
    "activeParameter": null,
    "callee": "INT_TO_REAL",
    "char": 20,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 17,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_real_to_int_valid 1`] = `
[
  {
    "activeParameter": null,
    "callee": "REAL_TO_INT",
    "char": 20,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 17,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_int_to_real_wrong_source 1`] = `
[
  {
    "activeParameter": null,
    "callee": "INT_TO_REAL",
    "char": 20,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 17,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_dint_to_int_wrong_source 1`] = `
[
  {
    "activeParameter": null,
    "callee": "DINT_TO_INT",
    "char": 20,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 17,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_implicit_dint_to_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_bool_to_int_valid 1`] = `
[
  {
    "activeParameter": null,
    "callee": "BOOL_TO_INT",
    "char": 22,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_int_to_bool_valid 1`] = `
[
  {
    "activeParameter": null,
    "callee": "INT_TO_BOOL",
    "char": 21,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_time_to_dword 1`] = `
[
  {
    "activeParameter": null,
    "callee": "TIME_TO_DWORD",
    "char": 22,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_date_to_string 1`] = `
[
  {
    "activeParameter": null,
    "callee": "DATE_TO_STRING",
    "char": 29,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_dt_to_date 1`] = `
[
  {
    "activeParameter": null,
    "callee": "DT_TO_DATE",
    "char": 20,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_trunc_real_to_dint 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_trunc_int_real_to_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conversion_overloaded_to_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "TO_INT",
    "char": 15,
    "file": "pou",
    "label": null,
    "line": 9,
  },
  {
    "activeParameter": null,
    "callee": "Convert",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) duplicate_declaration 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_dd",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) unresolved_identifier_in_body 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) pragma_conflict_hide_plus_monitoring 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conditional_define_then_if 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Run",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conditional_else_branch_taken 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Run",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conditional_elsif_chain 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Run",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conditional_orphan_else 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Run",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) conditional_undefine_after_define 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Run",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_arithmetic_same_type 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_arithmetic_int_plus_dint 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_arithmetic_int_plus_real 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_modulo_on_real 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_comparison_int_vs_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_logical_bool 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_bitwise_on_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_shift_left 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_arithmetic_bool_plus_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_sel_bool_picker 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Pick",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_mux_multi_select 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Pick",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_min_max 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Pick",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_limit_clamp 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Clamp",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_math_abs 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_math_sqrt_real 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_math_ln 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_math_log 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_math_exp 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_math_inverse_trig 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 17,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_math_trig 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_math_expt 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_shift_right 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_rotate_left 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_rotate_right 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_sys_isvalidref 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Check",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_sys_varinfo 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Inspect",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_sys_currenttask 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Inspect",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_sys_try_catch 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Guarded",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_sys_new_delete 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Alloc",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) op_sys_queryinterface 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Query",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_hex 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_binary 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_octal 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_typed_int_hash 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_real_scientific 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_time 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_date 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_tod 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_string_single_quoted 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_wstring_double_quoted 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) literal_string_to_int_assignment 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) interface_empty 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_iei",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) interface_empty_impl 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_iei_called",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) interface_with_method 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) interface_with_method_impl 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 22,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) interface_missing_implementation 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_imi",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) oop_base 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Greet",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) oop_extends_simple 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Greet",
    "char": 19,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) oop_extends_with_override 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Greet",
    "char": 17,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) oop_extends_with_super 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Greet",
    "char": 13,
    "file": "pou",
    "label": null,
    "line": 8,
  },
  {
    "activeParameter": null,
    "callee": "Greet",
    "char": 18,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) oop_final_fb 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_final",
    "char": 9,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) oop_abstract_fb 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) oop_abstract_instantiated 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Inner",
    "char": 17,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_array_of_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_array_2d 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_pointer_to_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_reference_to_int 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_string_n 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Init",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_var_temp_in_method 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_var_constant 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Use",
    "char": 10,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_deref_non_pointer 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Execute",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_struct_simple 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_struct_extends 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_struct_nested 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_enum_simple 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_enum_with_base 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_enum_explicit_values 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_alias_int 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_alias_string 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_union 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_subrange 1`] = `
[
  {
    "activeParameter": null,
    "callee": "INT",
    "char": 29,
    "file": "pou",
    "label": null,
    "line": 0,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_any_function_input 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "FUN_LANG_any_input",
    "char": 32,
    "file": "plc_prg",
    "label": "FUN_LANG_any_input(anyArg : ANY)",
    "line": 5,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_any_int_function_input 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "FUN_LANG_any_int",
    "char": 30,
    "file": "plc_prg",
    "label": "FUN_LANG_any_int(anyInt : ANY_INT)",
    "line": 5,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_codesys_xint 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_codesys_uxint 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_codesys_xword 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_codesys_vector 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Compute",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_codesys_version 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Inspect",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_implicit_enum_inline 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Step",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) type_dut_struct_with_bit_fields 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_input_output_inout_on_fb 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_io",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 5,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_input_constant 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_vic",
    "char": 7,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_inst_in_method 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Tick",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_stat_in_method 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Bump",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_retain 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Tick",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_persistent 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Tick",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_non_retain 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Tick",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_config_address_binding 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_external_gvl 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_external_consumer 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Read",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) var_output_on_function 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "FB_LANG_function_var_output",
    "char": 36,
    "file": "plc_prg",
    "label": "FB_LANG_function_var_output(iA : INT, iB : INT)",
    "line": 5,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) ctrl_if_elsif_else 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Classify",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) ctrl_case_of_else 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Pick",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) ctrl_for_to_by_do 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Sum",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) ctrl_while_do 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Drain",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) ctrl_repeat_until 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Step",
    "char": 10,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) ctrl_exit_in_loop 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Run",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) ctrl_continue_in_loop 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Count",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) ctrl_return_from_method 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "Check",
    "char": 13,
    "file": "plc_prg",
    "label": "Check(iValue : INT)",
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) keyword_this_dereference 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Inc",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) keyword_null_pointer_init 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Reset",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) operand_bit_access_byte 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Inspect",
    "char": 15,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) operand_bit_assign_word 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Flip",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) operand_partial_word_in_dword 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Extract",
    "char": 14,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) operand_hw_address_marker 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Read",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) operand_uchar_literal 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Pick",
    "char": 11,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_fb_method_call_no_args 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Tick",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_fb_method_call_one_input 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "AddOne",
    "char": 15,
    "file": "plc_prg",
    "label": "AddOne(iIn : INT)",
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_fb_method_call_named_args 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "Configure",
    "char": 19,
    "file": "plc_prg",
    "label": "Configure(iWidth : INT, iHeight : INT)",
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_fb_method_returns_value 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "Compute",
    "char": 27,
    "file": "plc_prg",
    "label": "Compute(iIn : INT)",
    "line": 5,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_fb_property_read 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_fb_property_write 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_fb_callable 1`] = `
[
  {
    "activeParameter": null,
    "callee": "fb_uc",
    "char": 6,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_struct_member_access 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_struct_nested_member 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_gvl_field_access 1`] = `[]`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_this_member_in_method 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Bump",
    "char": 12,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_function_call_with_arg 1`] = `
[
  {
    "activeParameter": 0,
    "callee": "FUN_LANG_use_function_call",
    "char": 37,
    "file": "plc_prg",
    "label": "FUN_LANG_use_function_call(iIn : INT)",
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_array_indexed_method_call 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Tick",
    "char": 16,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_pointer_deref_struct_field 1`] = `
[
  {
    "activeParameter": null,
    "callee": "SetTarget",
    "char": 17,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;

exports[`signatureHelp corpus (every call site — POU + PLC_PRG) use_self_method_call 1`] = `
[
  {
    "activeParameter": null,
    "callee": "Inner",
    "char": 12,
    "file": "pou",
    "label": null,
    "line": 12,
  },
  {
    "activeParameter": null,
    "callee": "Outer",
    "char": 13,
    "file": "plc_prg",
    "label": null,
    "line": 4,
  },
]
`;
